syntax = "proto3";

option csharp_namespace = "Adnc.Shared.Rpc.Grpc.Messages";

package messages;

message LoginReply{
  string Token = 1;
  string RefreshToken =2;
}

message LoginRequest {
  string Account = 1;
  string Password = 2;
}